--- a/src/Morfologik.Stemming/Morfologik.Stemming.csproj
+++ b/src/Morfologik.Stemming/Morfologik.Stemming.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet Package Settings">
@@ -11,7 +11,7 @@
       dictionaries (hence the name) used for part-of-speech tagging and
       part-of-speech synthesis.
     </Description>
-    <PackageTags>$(PackageTags);fsa;finite;state;automata;automaton;traversal</PackageTags>
+    <PackageTags>$(PackageTags);stemmer;stemming;morphologic;ukrainian</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
