--- a/src/Morfologik.TestFramework/Morfologik.TestFramework.csproj
+++ b/src/Morfologik.TestFramework/Morfologik.TestFramework.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!-- TargetFramework intentionally left blank to override TestReferences.Common.targets -->
-    <TargetFramework></TargetFramework>
-    <TargetFrameworks>netcoreapp2.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+  </PropertyGroup>
+
+  <PropertyGroup Label="NuGet Package Defaults">
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
