Morfologik.TestFramework: Added package dependency on NUnit

--- a/src/Morfologik.TestFramework/Morfologik.TestFramework.csproj
+++ b/src/Morfologik.TestFramework/Morfologik.TestFramework.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="J2N" Version="$(J2NPackageReferenceVersion)" />
+    <PackageReference Include="NUnit" Version="$(NUnitPackageReferenceVersion)" />
   </ItemGroup>
 
 </Project>
