--- a/tests/Morfologik.Stemming.Tests/Morfologik.Stemming.Tests.csproj
+++ b/tests/Morfologik.Stemming.Tests/Morfologik.Stemming.Tests.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Morfologik.Stemming\Morfologik.Stemming.csproj" />
     <ProjectReference Include="..\..\src\Morfologik.TestFramework\Morfologik.TestFramework.csproj" />
   </ItemGroup>
 
