--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,7 +1,9 @@
 <Project>
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.targets', '$(MSBuildThisFileDirectory)../'))" />
 
-  <PropertyGroup>
-    <NoWarn>$(NoWarn);1591</NoWarn>
+  <PropertyGroup Label="Assembly Documentation">
+    <NoWarn Label="Missing XML comment for publicly visible type or member">$(NoWarn);1591</NoWarn>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
+  
 </Project>
