Directory.Build.targets: Added FEATURE_SERIALIZABLE_EXCEPTIONS on .NET Core and .NET 5+
See: https://docs.microsoft.com/en-us/dotnet/standard/serialization/binary-serialization#net-core

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -9,6 +9,8 @@
   <PropertyGroup Condition=" $(TargetFramework.StartsWith('net4')) Or $(TargetFramework.StartsWith('netstandard2.')) Or $(TargetFramework.StartsWith('netcoreapp2.')) Or $(TargetFramework.StartsWith('netcoreapp3.')) Or $(TargetFramework.StartsWith('net5.')) ">
 
     <DefineConstants>$(DefineConstants);FEATURE_SERIALIZABLE</DefineConstants>
+    <!-- serializable exeptions were added back in .NET Core 2.0.4: https://docs.microsoft.com/en-us/dotnet/standard/serialization/binary-serialization#net-core -->
+    <DefineConstants>$(DefineConstants);FEATURE_SERIALIZABLE_EXCEPTIONS</DefineConstants>
 
     <!-- NOTE: Microsoft's recommendation is not to use the ICloneable interface.
         To add it to the build, just add /p:IncludeICloneable to the command line. -->
@@ -17,8 +19,6 @@
 
   <!-- Features in .NET Framework 4+ only -->
   <PropertyGroup Condition="$(TargetFramework.StartsWith('net4'))">
-
-    <DefineConstants>$(DefineConstants);FEATURE_SERIALIZABLE_EXCEPTIONS</DefineConstants>
 
     <DebugType>full</DebugType>
   </PropertyGroup>
