--- a/src/Morfologik.Stemming/Morfologik.Stemming.csproj
+++ b/src/Morfologik.Stemming/Morfologik.Stemming.csproj
@@ -6,11 +6,8 @@
 
   <PropertyGroup Label="NuGet Package Settings">
     <AssemblyTitle>Mofologik.Fsa</AssemblyTitle>
-    <Description>
-      Morfologik Stemming Library. Morfologik is a project aiming at generating Polish morphosyntactic
-      dictionaries (hence the name) used for part-of-speech tagging and
-      part-of-speech synthesis.
-    </Description>
+    <Description>Morfologik Stemming Library. Morfologik is a project aiming at generating Polish morphosyntactic </Description>
+    <Description>$(Description)dictionaries (hence the name) used for part-of-speech tagging and part-of-speech synthesis.</Description>
     <PackageTags>$(PackageTags);stemmer;stemming;morphologic;ukrainian</PackageTags>
   </PropertyGroup>
 
