SWEEP: Upgraded to .NET 9 SDK. Added net8.0 and net9.0 tests and target. Bumped from net451 to net462. Added net471 target to test netstandard2.0.

--- a/.build/azure-templates/publish-test-results.yml
+++ b/.build/azure-templates/publish-test-results.yml
@@ -25,10 +25,12 @@ steps:
     EnsureNotNullOrEmpty('${{ parameters.testResultsArtifactName }}', 'testResultsArtifactName')
     EnsureNotNullOrEmpty('${{ parameters.testResultsFileName }}', 'testResultsFileName')
   displayName: 'Validate Template Parameters'
+  condition: eq(variables['System.Debug'], 'true')
 
 #- template: 'show-all-files.yml' # Uncomment for debugging
 
 - pwsh: |
+    $testResultsFormat = "${{ parameters.testResultsFormat }}"
     $testProjectName = "${{ parameters.testProjectName }}"
     $testResultsFileName = "$(Build.ArtifactStagingDirectory)/${{ parameters.testResultsArtifactName }}/${{ parameters.osName }}/${{ parameters.framework }}/${{ parameters.testPlatform }}/$testProjectName/${{ parameters.testResultsFileName }}"
     $testResultsFileExists = Test-Path $testResultsFileName
@@ -36,38 +38,63 @@ steps:
 
         $reader = [System.Xml.XmlReader]::Create($testResultsFileName)
         try {
-            $countersFound = $false
-            $crashed = $false
-            $inRunInfos = $false
-            while ($reader.Read()) {
-                if ($reader.NodeType -eq [System.Xml.XmlNodeType]::Element) {
-                    if (!$countersFound -and $reader.Name -eq 'Counters') {
-                        $failed = $reader.GetAttribute('failed')
-                        $passed = $reader.GetAttribute('passed')
-                        $ignored = (([int]$reader.GetAttribute('total')) - ([int]$reader.GetAttribute('executed'))).ToString()
-                        $testResults = "Tests failed: $failed, passed: $passed, ignored: $ignored"
-                        Write-Host "##vso[task.setvariable variable=TestResults;]$testResults"
-                        # Report a running total of failures
-                        $totalFailures = ([int]$env:TOTALFAILURES + [int]$failed).ToString()
-                        Write-Host "##vso[task.setvariable variable=TotalFailures;]$totalFailures"
-                        $countersFound = $true
-                    }
-                    # Report a crash of the test runner
-                    if ($reader.Name -eq 'RunInfos') {
-                        $inRunInfos = $true
-                    }
-                    if ($inRunInfos -and !$crashed -and $reader.Name -eq 'Text' -and $reader.ReadInnerXml().Contains('Test host process crashed')) {
-                        Write-Host "##vso[task.setvariable variable=HostCrashed;]true"
-                        # Report all of the test projects that crashed
-                        $crashedRuns = "$env:CRASHEDRUNS,$testProjectName".TrimStart(',')
-                        Write-Host "##vso[task.setvariable variable=CrashedRuns;]$crashedRuns"
-                        $crashed = $true
+            if ($testResultsFormat.ToUpperInvariant() -eq 'NUNIT') {
+                $assemblyFound = $false
+                while ($reader.Read()) {
+                    if ($reader.NodeType -eq [System.Xml.XmlNodeType]::Element) {
+                        if (!$assemblyFound -and $reader.Name -eq 'test-suite' `
+                            -and $reader.GetAttribute('type') -eq 'Assembly' `
+                            -and $reader.GetAttribute('name') -eq "$testProjectName.dll") {
+                            $failed = $reader.GetAttribute('failed')
+                            $passed = $reader.GetAttribute('passed')
+                            $ignored = (([int]$reader.GetAttribute('inconclusive')) + ([int]$reader.GetAttribute('skipped'))).ToString()
+                            $assemblyFound = $true
+                        }
                     }
                 }
-                if ($reader.NodeType -eq [System.Xml.XmlNodeType]::EndElement -and $reader.Name -eq 'RunInfos') {
-                    $inRunInfos = $false
+            } else { # VSTest
+                $countersFound = $false
+                $crashed = $false
+                $inRunInfos = $false
+                while ($reader.Read()) {
+                    if ($reader.NodeType -eq [System.Xml.XmlNodeType]::Element) {
+                        if (!$countersFound -and $reader.Name -eq 'Counters') {
+                            $failed = $reader.GetAttribute('failed')
+                            $passed = $reader.GetAttribute('passed')
+                            $ignored = (([int]$reader.GetAttribute('total')) - ([int]$reader.GetAttribute('executed'))).ToString()
+                            $countersFound = $true
+                        }
+                        # Report a crash of the test runner (dotnet test with NUnit runner)
+                        if ($reader.Name -eq 'RunInfos') {
+                            $inRunInfos = $true
+                        }
+                        if ($inRunInfos -and !$crashed -and $reader.Name -eq 'Text') {
+                            $innerXml = $reader.ReadInnerXml()
+                            # Test for specific error messages - we may need to adjust this, as needed
+                            if ($innerXml -and ($innerXml.Contains('Test host process crashed') `
+                                -or $innerXml.Contains('Could not load file or assembly') `
+                                -or $innerXml.Contains("Could not find `'dotnet.exe`' host") `
+                                -or $innerXml.Contains('No test is available') `
+                                -or $innerXml.Contains('exited with error'))) {
+                                Write-Host "##vso[task.setvariable variable=HostCrashed;]true"
+                                # Report all of the test projects that crashed
+                                $crashedRuns = "$env:CRASHEDRUNS,$testProjectName".TrimStart(',')
+                                Write-Host "##vso[task.setvariable variable=CrashedRuns;]$crashedRuns"
+                                $crashed = $true
+                            }
+                        }
+                    }
+                    if ($reader.NodeType -eq [System.Xml.XmlNodeType]::EndElement -and $reader.Name -eq 'RunInfos') {
+                        $inRunInfos = $false
+                    }
                 }
             }
+            # Build the display string for the title
+            $testResults = "Tests failed: $failed, passed: $passed, ignored: $ignored"
+            Write-Host "##vso[task.setvariable variable=TestResults;]$testResults"
+            # Report a running total of failures
+            $totalFailures = ([int]$env:TOTALFAILURES + [int]$failed).ToString()
+            Write-Host "##vso[task.setvariable variable=TotalFailures;]$totalFailures"
         } finally {
             $reader.Dispose()
         }
