--- a/.build/azure-templates/publish-test-results-for-test-projects.yml
+++ b/.build/azure-templates/publish-test-results-for-test-projects.yml
@@ -15,6 +15,7 @@
 #        "- template: publish-test-results-for-target-frameworks.yml`n" + `
 #        "  parameters:`n" + `
 #        "    testProjectName: '$projectName'`n" + `
+#        "    framework: '${{ parameters.framework }}'`n + `
 #        "    osName: '$`{`{ parameters.osName `}`}'`n" + `
 #        "    testPlatform: '$`{`{ parameters.testPlatform `}`}'`n" + `
 #        "    testResultsFormat: '$`{`{ parameters.testResultsFormat `}`}'`n" + `
@@ -28,6 +29,7 @@
 #Set-Clipboard -Value $output
 
 parameters:
+  framework: '' # The target framework for display purposes.
   osName: '' # The name of the operating system for display purposes.
   testPlatform: 'x64' # Target platform architecture used for test execution. The allowed values depend on the type of architecture being targeted (x86, x86_64, x64, ARM, etc.).
   testResultsFormat: VSTest # Specify the format of the results files you want to publish. The following formats are supported: JUnit, NUnit, VSTest, XUnit, CTest
@@ -42,24 +44,27 @@ steps:
             Write-Host "##vso[task.complete result=Failed;]"
         }
     }
+    EnsureNotNullOrEmpty('${{ parameters.framework }}', 'framework')
     EnsureNotNullOrEmpty('${{ parameters.osName }}', 'osName')
     EnsureNotNullOrEmpty('${{ parameters.testResultsFormat }}', 'testResultsFormat')
     EnsureNotNullOrEmpty('${{ parameters.testResultsArtifactName }}', 'testResultsArtifactName')
     EnsureNotNullOrEmpty('${{ parameters.testResultsFileName }}', 'testResultsFileName')
   displayName: 'Validate Template Parameters'
 
-- template: publish-test-results-for-target-frameworks.yml
+- template: publish-test-results.yml
   parameters:
     testProjectName: 'Morfologik.Stemming.Tests'
+    framework: '${{ parameters.framework }}'
     osName: '${{ parameters.osName }}'
     testPlatform: '${{ parameters.testPlatform }}'
     testResultsFormat: '${{ parameters.testResultsFormat }}'
     testResultsArtifactName: '${{ parameters.testResultsArtifactName }}'
     testResultsFileName: '${{ parameters.testResultsFileName }}'
 
-- template: publish-test-results-for-target-frameworks.yml
+- template: publish-test-results.yml
   parameters:
     testProjectName: 'Morfologik.Polish.Tests'
+    framework: '${{ parameters.framework }}'
     osName: '${{ parameters.osName }}'
     testPlatform: '${{ parameters.testPlatform }}'
     testResultsFormat: '${{ parameters.testResultsFormat }}'
