--- a/src/Morfologik.Polish/Morfologik.Polish.csproj
+++ b/src/Morfologik.Polish/Morfologik.Polish.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
+    <TargetFrameworks>net9.0;net8.0;netstandard2.0;net462</TargetFrameworks>
     <RootNamespace>Morfologik.Stemming.Polish</RootNamespace>
   </PropertyGroup>
 
