--- a/src/Morfologik.TestFramework/Morfologik.TestFramework.csproj
+++ b/src/Morfologik.TestFramework/Morfologik.TestFramework.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>net9.0;net8.0;netstandard2.0;net462</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet Package Defaults">
