--- a/.build/nuget.props
+++ b/.build/nuget.props
@@ -12,8 +12,8 @@
     <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="$(SolutionDir)LICENSE.txt" Pack="true" PackagePath="LICENSE.txt"/>
-    <None Include="$(SolutionDir)README.md" Pack="true" PackagePath="\readme.md"/>
-    <None Include="$(SolutionDir)branding/$(PackageIcon)" Pack="true" PackagePath="$(PackageIcon)"/>
+    <None Include="$(RepositoryRoot)LICENSE.txt" Pack="true" PackagePath="LICENSE.txt"/>
+    <None Include="$(RepositoryRoot)README.md" Pack="true" PackagePath="\readme.md"/>
+    <None Include="$(RepositoryRoot)branding/$(PackageIcon)" Pack="true" PackagePath="$(PackageIcon)"/>
   </ItemGroup>
 </Project>
