Morfologik.Stemming.Dictionary: Fixed obsolete warning for WebRequest by changing to use HttpClient. Added Uri tests to ensure it functions.

--- a/src/Morfologik.Stemming/Morfologik.Stemming.csproj
+++ b/src/Morfologik.Stemming/Morfologik.Stemming.csproj
@@ -23,6 +23,10 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="$(SystemTextEncodingCodePagesPackageReferenceVersion)" />
   </ItemGroup>
 
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) ">
+    <Reference Include="System.Net.Http"/>
+  </ItemGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
